# choose-consume

./: README.md  environment.yml
service/: config.py  get_product_by_barcode.py  practice_kivy_app.py  practicy_kivy_camera_app.py  pyproject.toml
